--- a/views/page/course.ejs
+++ b/views/page/course.ejs
@@ -1,8 +1,7 @@
 
-	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Course Grid 3<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1>Course Grid 2<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
 		</div>
 	</div>
 	
@@ -17,10 +16,10 @@
             <hr class="invis"> 
 
             <div class="row"> 
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item">
 						<div class="image-blog">
-							<img src="images/blog_1.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_1.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -48,10 +47,10 @@
 					</div>
                 </div><!-- end col -->
 
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item">
 						<div class="image-blog">
-							<img src="images/blog_2.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_2.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -78,11 +77,15 @@
 						</div>
 					</div>
                 </div><!-- end col -->	
-				
-				<div class="col-lg-4 col-md-6 col-12">
+            </div><!-- end row -->
+			
+			<hr class="hr3"> 
+			
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item">
 						<div class="image-blog">
-							<img src="images/blog_3.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_3.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -109,15 +112,10 @@
 						</div>
 					</div>
                 </div><!-- end col -->
-            </div><!-- end row -->			
-			
-			<hr class="hr3"> 
-			
-            <div class="row"> 
-				<div class="col-lg-4 col-md-6 col-12">
+				<div class="col-lg-6 col-md-6 col-12">
                    <div class="course-item">
 						<div class="image-blog">
-							<img src="images/blog_4.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_4.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
@@ -144,11 +142,15 @@
 						</div>
 					</div>
                 </div><!-- end col -->
-				
-                <div class="col-lg-4 col-md-6 col-12">
+			</div><!-- end row -->
+			
+			<hr class="hr3"> 
+			
+            <div class="row"> 
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item">
 						<div class="image-blog">
-							<img src="images/blog_5.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_5.jpg" alt="" class="img-fluid">
 						</div>		
 						<div class="course-br">
 							<div class="course-title">
@@ -176,10 +178,10 @@
 					</div>
                 </div><!-- end col -->
 
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item">
 						<div class="image-blog">
-							<img src="images/blog_6.jpg" alt="" class="img-fluid">
+							<img src="/images/blog_6.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
