--- a/views/page/layout.ejs
+++ b/views/page/layout.ejs
@@ -68,15 +68,15 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">kurslarimiz</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
-								<a class="dropdown-item" href="course-grid-2.html">Ieltsga Tayyorlov</a>
-								<a class="dropdown-item" href="course-grid-3.html">Testga Tayyotlov </a>
-								<a class="dropdown-item" href="course-grid-4.html">Prizident Maktabiga Tayyarlov</a>
+								<a class="dropdown-item" href="/courses/ielts">Ieltsga Tayyorlov</a>
+								<a class="dropdown-item" href="/courses/test">Testga Tayyorlov </a>
+								<a class="dropdown-item" href="/courses/maktab">Prizident Maktabiga Tayyarlov</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Yangiliklar </a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
-								<a class="dropdown-item" href="/blog/all">Muhim Yangiliklar </a>
+								<a class="dropdown-item" href="/single">Muhim Yangiliklar </a>
 								<a class="dropdown-item" href="/blog">Yangiliklar </a>
 							</div>
 						</li>
@@ -93,98 +93,6 @@
 	<!-- End header -->
 
             <%- body%>
-
-
-            <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('images/parallax_04.jpg');">
-                <div class="container">
-                    <div class="section-title text-center">
-                        <h3>Testimonials</h3>
-                        <p>Lorem ipsum dolor sit aet, consectetur adipisicing lit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                    </div><!-- end title -->
-        
-                    <div class="row">
-                        <div class="col-md-12 col-sm-12">
-                            <div class="testi-carousel owl-carousel owl-theme">
-                                <div class="testimonial clearfix">
-                                    <div class="testi-meta">
-                                        <img src="images/testi_01.png" alt="" class="img-fluid">
-                                        <h4>James Fernando </h4>
-                                    </div>
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-        
-                                <div class="testimonial clearfix">
-                                    <div class="testi-meta">
-                                        <img src="images/testi_02.png" alt="" class="img-fluid">
-                                        <h4>Jacques Philips </h4>
-                                    </div>
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                        <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-        
-                                <div class="testimonial clearfix">
-                                    <div class="testi-meta">
-                                        <img src="images/testi_03.png" alt="" class="img-fluid ">
-                                        <h4>Venanda Mercy </h4>
-                                    </div>
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-                                <div class="testimonial clearfix">
-                                    <div class="testi-meta">
-                                        <img src="images/testi_01.png" alt="" class="img-fluid">
-                                        <h4>James Fernando </h4>
-                                    </div>
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-        
-                                <div class="testimonial clearfix">
-                                    <div class="testi-meta">
-                                        <img src="images/testi_02.png" alt="" class="img-fluid">
-                                        <h4>Jacques Philips </h4>
-                                    </div>
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                        <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
-                                <!-- end testimonial -->
-        
-                                <div class="testimonial clearfix">
-                                    <div class="testi-meta">
-                                        <img src="images/testi_03.png" alt="" class="img-fluid">
-                                        <h4>Venanda Mercy </h4>
-                                    </div>
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                        <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div><!-- end testimonial -->
-                            </div><!-- end carousel -->
-                        </div><!-- end col -->
-                    </div><!-- end row -->
-                </div><!-- end container -->
-            </div><!-- end section -->
         
             <div class="parallax section dbcolor">
                 <div class="container">
@@ -237,8 +145,8 @@
                                 </div>
                                 <ul class="footer-links">
                                     <li><a href="/">Bosh Mune</a></li>
-                                    <li><a href="/course">Kurslarimiz</a></li>
-                                    <li><a href="/blog/all">Yangiliklar</a></li>
+                                    <li><a href="/courses/ielts">Kurslarimiz</a></li>
+                                    <li><a href="/blog">Yangiliklar</a></li>
                                     <li><a href="/teachers">Uztozlar</a></li>
                                     <li><a href="/contact">Biz bilan bog'lanish</a></li>
                                 </ul><!-- end links -->
@@ -254,7 +162,7 @@
                                 <ul class="footer-links">
                                     <li><a href="mailto:#">SmartEdu@gmail.com</a></li>
                                     <li><a href="#">www.Smartedu.com</a></li>
-                                    <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
+                                    <li>pfshohruh.xasanov@gmail.com</li>
                                     <li>+998 99 593 98 03 </li>
                                 </ul><!-- end links -->
                             </div><!-- end clearfix -->
