--- a/views/page/course.ejs
+++ b/views/page/course.ejs
@@ -12,21 +12,21 @@
                     <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
                 </div>
             </div><!-- end title -->
-
+			
             <hr class="invis"> 
-
             <div class="row"> 
+				<% for(item of data.courses) {%>
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="course-item">
-						<div class="image-blog">
-							<img src="/images/blog_1.jpg" alt="" class="img-fluid">
+						<div  class="image-blog">
+							<img  src="<%= item.image%>" alt="" class="img-fluid">
 						</div>
 						<div class="course-br">
 							<div class="course-title">
-								<h2><a href="#" title="">Engineering</a></h2>
+								<h2><a href="#" title=""><%= item.name%>></a></h2>
 							</div>
 							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+								<p><%= item.description%></p>
 							</div>
 							<div class="course-rating">
 								4.5
@@ -39,175 +39,14 @@
 						</div>
 						<div class="course-meta-bot">
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> <%= item.duration%></li>
+								<li><i class="fa fa-users" aria-hidden="true"></i> 20 Student</li>
+								<li><i class="fa fa-book" aria-hidden="true"></i> <%= item.books%></li>
 							</ul>
 						</div>
 					</div>
                 </div><!-- end col -->
-
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
-						<div class="image-blog">
-							<img src="/images/blog_2.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Hotel Management</a></h2>
-							</div>
-							<div class="blog-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->	
-            </div><!-- end row -->
-			
-			<hr class="hr3"> 
-			
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
-						<div class="image-blog">
-							<img src="/images/blog_3.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Biotechnology</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->
-				<div class="col-lg-6 col-md-6 col-12">
-                   <div class="course-item">
-						<div class="image-blog">
-							<img src="/images/blog_4.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Medical Sciences</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->
-			</div><!-- end row -->
-			
-			<hr class="hr3"> 
-			
-            <div class="row"> 
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
-						<div class="image-blog">
-							<img src="/images/blog_5.jpg" alt="" class="img-fluid">
-						</div>		
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Finance</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->
-
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
-						<div class="image-blog">
-							<img src="/images/blog_6.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Fashion Designing</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>	
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->
+				<% }%>
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
