--- a/views/page/blog.ejs
+++ b/views/page/blog.ejs
@@ -1,7 +1,7 @@
 
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Blog<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= data.phrase[2].teachersID.fullname%><span class="m_1"><%= data.phrase[2].title%></span></h1>
 		</div>
 	</div>
 	
@@ -9,148 +9,37 @@
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 offset-md-2">
-                    <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
+                    <p class="lead">Bugun sen dam olayotganingda boshqalar mehnat qilyapdi. Bugun turib o'z ustingda ishlashni boshlamasang, bir kun kelib ular dam oladi sen esa ishlaysan</p>
                 </div>
             </div><!-- end title -->
 
-            <hr class="invis"> 
-
+            <hr class="invis">
+ 
             <div class="row"> 
+				<% for(item of data.blog) {%>
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="blog-item">
 						<div class="image-blog">
-							<img src="images/blog_1.jpg" alt="" class="img-fluid">
+							<img src="<%= item.image%>" alt="" class="img-fluid">
 						</div>
 						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
-                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+							<span><i class="fa fa-calendar"></i> <a href="#"><%= item.createdAt.toDateString().slice(3)%></a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">Blogs</a> </span>
                             <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
 						</div>
 						<div class="blog-title">
-							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
+							<h2><a href="#" title=""><%= item.name%></a></h2>
 						</div>
 						<div class="blog-desc">
-							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+							<p><%= item.title%></p>
 						</div>
 						<div class="blog-button">
 							<a class="hover-btn-new orange" href="#"><span>Read More<span></a>
 						</div>
 					</div>
+					<hr class="invis">
                 </div><!-- end col -->
-
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="blog-item">
-						<div class="image-blog">
-							<img src="images/blog_2.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
-                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
-                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
-						</div>
-						<div class="blog-title">
-							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
-						</div>
-						<div class="blog-desc">
-							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-						</div>
-						<div class="blog-button">
-							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
-						</div>
-					</div>
-                </div><!-- end col -->
-
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="blog-item">
-						<div class="image-blog">
-							<img src="images/blog_3.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
-                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
-                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
-						</div>
-						<div class="blog-title">
-							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
-						</div>
-						<div class="blog-desc">
-							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-						</div>
-						<div class="blog-button">
-							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
-						</div>
-					</div>
-                </div><!-- end col -->
-            </div><!-- end row -->
-
-            <hr class="hr3"> 
-
-            <div class="row"> 
-                <div class="col-lg-4 col-md-6 col-12">
-                   <div class="blog-item">
-						<div class="image-blog">
-							<img src="images/blog_4.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
-                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
-                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
-						</div>
-						<div class="blog-title">
-							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
-						</div>
-						<div class="blog-desc">
-							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-						</div>
-						<div class="blog-button">
-							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
-						</div>
-					</div>
-                </div><!-- end col -->
-
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="blog-item">
-						<div class="image-blog">
-							<img src="images/blog_5.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
-                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
-                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
-						</div>
-						<div class="blog-title">
-							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
-						</div>
-						<div class="blog-desc">
-							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-						</div>
-						<div class="blog-button">
-							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
-						</div>
-					</div>
-                </div><!-- end col -->
-
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="blog-item">
-						<div class="image-blog">
-							<img src="images/blog_6.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
-                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
-                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
-						</div>
-						<div class="blog-title">
-							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
-						</div>
-						<div class="blog-desc">
-							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-						</div>
-						<div class="blog-button">
-							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
-						</div>
-					</div>
-                </div><!-- end col -->
+				<% }%>
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->
