--- a/views/page/course.ejs
+++ b/views/page/course.ejs
@@ -1,15 +1,15 @@
 
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Course Grid 2<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
-		</div>
+			<h1><%= data.phrase[0].teachersID.fullname%><span class="m_1"><%= data.phrase[0].title%></span></h1>
+		</div><% console.log(data.phrase)%>
 	</div>
 	
     <div id="overviews" class="section wb">
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 offset-md-2">
-                    <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
+                    <p class="lead">Bugun sen dam olayotganingda boshqalar mehnat qilyapdi. Bugun turib o'z ustingda ishlashni boshlamasang, bir kun kelib ular dam oladi sen esa ishlaysan</p>
                 </div>
             </div><!-- end title -->
 			
