--- a/views/page/teachers.ejs
+++ b/views/page/teachers.ejs
@@ -1,17 +1,18 @@
 
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Teachers<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= data.phrase[1].teachersID.fullname%><span class="m_1"><%= data.phrase[1].title%></span></h1>
 		</div>
 	</div>
 	
 	<div id="teachers" class="section wb">
         <div class="container">
             <div class="row">
+				<% for(item of data.all) {%>
 				<div class="col-lg-3 col-md-6 col-12">
 					<div class="our-team">
 						<div class="team-img">
-							<img src="/images/team-01.png">
+							<img src="<%= item.image%>">
 							<div class="social">
 								<ul>
 									<li><a href="#" class="fa fa-facebook"></a></li>
@@ -22,151 +23,12 @@
 							</div>
 						</div>
 						<div class="team-content">
-							<h3 class="title">Williamson</h3>
-							<span class="post">Web Developer</span>
+							<h3 class="title"><%= item.fullname%></h3>
+							<span class="post"><%= item.direction%></span>
 						</div>
 					</div>
 				</div>
-
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-02.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Kristiana</h3>
-							<span class="post">Web Designer</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-03.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Steve Thomas</h3>
-							<span class="post">Web Developer</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-04.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Miranda joy</h3>
-							<span class="post">Web Developer</span>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-01.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Williamson</h3>
-							<span class="post">Web Developer</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-02.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Kristiana</h3>
-							<span class="post">Web Designer</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-03.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Steve Thomas</h3>
-							<span class="post">Web Developer</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6 col-12">
-					<div class="our-team">
-						<div class="team-img">
-							<img src="/images/team-04.png">
-							<div class="social">
-								<ul>
-									<li><a href="#" class="fa fa-facebook"></a></li>
-									<li><a href="#" class="fa fa-twitter"></a></li>
-									<li><a href="#" class="fa fa-linkedin"></a></li>
-									<li><a href="#" class="fa fa-skype"></a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3 class="title">Miranda joy</h3>
-							<span class="post">Web Developer</span>
-						</div>
-					</div>
-				</div>
+				<% }%>
             </div><!-- end row -->
         </div><!-- end container -->
     </div><!-- end section -->	
