--- a/views/page/blog-single.ejs
+++ b/views/page/blog-single.ejs
@@ -1,9 +1,8 @@
 <div class="all-title-box">
 	<div class="container text-center">
-		<h1>Blog Single<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+		<h1><%= data.phrase[3].teachersID.fullname%><span class="m_1"><%= data.phrase[3].title%></span></h1>
 	</div>
 </div>
-
 <div id="overviews" class="section wb">
 	<div class="container">
 		<div class="row"> 
@@ -59,7 +58,7 @@
 					<div id="comment-blog">
 						<ul class="comment-list">
 							<li class="comment">
-								<div class="avatar"><img alt="" src="images/avatar-01.jpg" class="avatar"></div>
+								<div class="avatar"><img alt="" src="images/iconca.png" class="avatar"></div>
 								<div class="comment-container">
 									<h5 class="comment-author"><a href="#">John Smith</a></h5>
 									<div class="comment-meta">
@@ -145,14 +144,14 @@
 					</div>
 				</div>
 				<div class="widget-categories">
-					<h3 class="widget-title">Categories</h3>
+					<h3 class="widget-title">Kurslarimiz</h3>
 					<ul>
-						<li><a href="#">Political Science</a></li>
-						<li><a href="#">Business Leaders Guide</a></li>
-						<li><a href="#">Become a Product Manage</a></li>
-						<li><a href="#">Language Education</a></li>
-						<li><a href="#">Micro Biology</a></li>
-						<li><a href="#">Social Media Management</a></li>
+						<li><a href="#">Ieltsga tayyorlov</a></li>
+						<li><a href="#">Biologiya fanidan Testga tayyotlov</a></li>
+						<li><a href="#">Mental Arifmetika</a></li>
+						<li><a href="#">Ingliz gramatikasi</a></li>
+						<li><a href="#">Prizident Maktabiga Tayyarlov</a></li>
+						<li><a href="#">SMM Menejment</a></li>
 					</ul>
 				</div>
 				<div class="widget-tags">
