--- a/views/page/layout.ejs
+++ b/views/page/layout.ejs
@@ -35,7 +35,7 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif] -->
 
 </head>
 <body class="host_version"> 
@@ -64,7 +64,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbars-host">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active"><a class="nav-link" href="/">bosh menu</a></li>
+						<li class="nav-item"><a class="nav-link" href="/">bosh menu</a></li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">kurslarimiz</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
