--- a/views/page/contact.ejs
+++ b/views/page/contact.ejs
@@ -1,40 +1,42 @@
 
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Contact<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1><%= data.phrase[0].teachersID.fullname%><span class="m_1"><%= data.phrase[0].title%></span></h1>
 		</div>
 	</div>
 	
     <div id="contact" class="section wb">
         <div class="container">
             <div class="section-title text-center">
-                <h3>Need Help? Sure we are Online!</h3>
-                <p class="lead">Let us give you more details about the special offer website you want us. Please fill out the form below. <br>We have million of website owners who happy to work with us!</p>
+                <h3>Yordam Kerakmi? Bizga aloqaga chiqing!</h3>
+                <p class="lead">Bizning o'quv kurslarimiz haqida to'liq malumotga ega bo'moqchimisiz?  Bizga aloqaga chiqing, bizSizga yordam berishga doim tayyormiz.</p>
+              
             </div><!-- end title -->
-
+            <h5 class="lead">O'ziz haqizdagi malumotlarni to'ldirib jo'nating.Sizga aloqaga chiqamiz!</h5>
+            <hr class="invis">
             <div class="row">
                 <div class="col-xl-6 col-md-12 col-sm-12">
                     <div class="contact_form">
                         <div id="message"></div>
-                        <form id="contactform" class="" action="contact.php" name="contactform" method="post">
+                        <form   method="POST" action="/contact?_method=POST">
                             <div class="row row-fluid">
                                 <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="text" name="first_name" id="first_name" class="form-control" placeholder="First Name">
+                                    <input type="text" name="fullname" id="fullname" value="" class="form-control" placeholder="Ism Familya">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name">
+                                    <input type="text" name="course" id="course" value="" class="form-control" placeholder="Kurs Turi">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
+                                    <input type="text" name="email" id="email" value="" class="form-control" placeholder="Elektron pochta">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone">
+                                    <input type="text" name="phone" id="phone" value="" class="form-control" placeholder="Telefon nomer">
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Give us more details.."></textarea>
+                                    <textarea class="form-control" name="description" value=""  id="description" rows="6" placeholder="Give us more details.."></textarea>
                                 </div>
                                 <div class="text-center pd">
-                                    <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">Get a Quote</button>
+                                    <button type="submit"  id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">Jo'natish</button>
                                 </div>
                             </div>
                         </form>
