--- a/views/page/pricing.ejs
+++ b/views/page/pricing.ejs
@@ -1,181 +1,47 @@
 
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Pricing<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			
 		</div>
 	</div>
 	
-    <div id="pricing-box" class="section wb">
-        <div class="container">
-			<div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="pricingTable">
-                        <div class="pricingTable-header">
-                            <span class="heading">
-                                <h3>Standard</h3>
-                            </span>
-                            <span class="price-value">$15<span class="month">month</span> <span>Lorem ipsum </span><span>Lorem ipsum dolor sit amet</span></span>
-                        </div>
-
-                        <div class="pricingContent">
-                            <i class="fa fa-adjust"></i>
-                            <ul>
-                                <li>50GB Disk Space</li>
-                                <li>50 Email Accounts</li>
-                                <li>50GB Monthly Bandwidth</li>
-                                <li>10 subdomains</li>
-                                <li>50 Domains</li>
-                            </ul>
-                        </div><!-- /  CONTENT BOX-->
-
-                        <div class="pricingTable-sign-up">
-                            <a href="#" class="hover-btn-new orange"><span>sign up</span></a>
-                        </div><!-- BUTTON BOX-->
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-                    <div class="pricingTable pink">
-                        <div class="pricingTable-header">
-                            <span class="heading">
-                                <h3>Business</h3>
-                            </span>
-                            <span class="price-value">$30<span class="month">month</span> <span>Lorem ipsum</span><span>Lorem ipsum dolor sit amet</span></span>
-                        </div>
-
-                        <div class="pricingContent">
-                            <i class="fa fa-briefcase"></i>
-                            <ul>
-                                <li>70GB Disk Space</li>
-                                <li>70 Email Accounts</li>
-                                <li>70GB Monthly Bandwidth</li>
-                                <li>30 subdomains</li>
-                                <li>70 Domains</li>
-                            </ul>
-                        </div><!-- /  CONTENT BOX-->
-
-                        <div class="pricingTable-sign-up">
-                            <a href="#" class="hover-btn-new orange"><span>sign up</span></a>
-                        </div><!-- BUTTON BOX-->
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-6">
-                    <div class="pricingTable orange">
-                        <div class="pricingTable-header">
-                            <span class="heading">
-                                <h3>Premium</h3>
-                            </span>
-                            <span class="price-value">$45<span class="month">month</span> <span>Lorem ipsum</span><span>Lorem ipsum dolor sit amet</span></span>
-                        </div>
-
-                        <div class="pricingContent">
-                            <i class="fa fa-cube"></i>
-                            <ul>
-                                <li>80GB Disk Space</li>
-                                <li>80 Email Accounts</li>
-                                <li>80GB Monthly Bandwidth</li>
-                                <li>40 subdomains</li>
-                                <li>80 Domains</li>
-                            </ul>
-                        </div><!-- /  CONTENT BOX-->
-
-                        <div class="pricingTable-sign-up">
-                            <a href="#" class="hover-btn-new orange"><span>sign up</span></a>
-                        </div><!-- BUTTON BOX-->
-                    </div>
-                </div>
-            </div>
-		</div>
-    </div><!-- end section -->
-
-    <div id="testimonials" class="parallax section db parallax-off" style="background-image:url('images/parallax_04.jpg');">
+    <div id="contact" class="section wb">
         <div class="container">
             <div class="section-title text-center">
-                <h3>Testimonials</h3>
-                <p>Lorem ipsum dolor sit aet, consectetur adipisicing lit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <h3>Yordam Kerakmi? Bizga aloqaga chiqing!</h3>
+                <p class="lead">Bizning o'quv kurslarimiz haqida to'liq malumotga ega bo'moqchimisiz?  Bizga aloqaga chiqing, bizSizga yordam berishga doim tayyormiz.</p>
+              
             </div><!-- end title -->
-
+            <h5 class="lead">O'ziz haqizdagi malumotlarni to'ldirib jo'nating.Sizga aloqaga chiqamiz!</h5>
+            <hr class="invis">
             <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="testi-carousel owl-carousel owl-theme">
-                        <div class="testimonial clearfix">
-							<div class="testi-meta">
-                                <img src="images/testi_01.png" alt="" class="img-fluid">
-                                <h4>James Fernando </h4>
+                <div class="col-xl-6 col-md-12 col-sm-12">
+                    <div class="contact_form">
+                        <div id="message"></div>
+                        <form   method="POST" action="/contact?_method=POST">
+                            <div class="row row-fluid">
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <input type="text" name="fullname" id="fullname" value="" class="form-control" placeholder="Ism Familya">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <input type="text" name="course" id="course" value="" class="form-control" placeholder="Kurs Turi">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <input type="text" name="email" id="email" value="" class="form-control" placeholder="Elektron pochta">
+                                </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <input type="text" name="phone" id="phone" value="" class="form-control" placeholder="Telefon nomer">
+                                </div>
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <textarea class="form-control" name="description" value=""  id="description" rows="6" placeholder="Give us more details.."></textarea>
+                                </div>
+                                <div class="text-center pd">
+                                    <button type="submit"  id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">Jo'natish</button>
+                                </div>
                             </div>
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
-
-                        <div class="testimonial clearfix">
-							<div class="testi-meta">
-                                <img src="images/testi_02.png" alt="" class="img-fluid">
-                                <h4>Jacques Philips </h4>
-                            </div>
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
-
-                        <div class="testimonial clearfix">
-							<div class="testi-meta">
-                                <img src="images/testi_03.png" alt="" class="img-fluid ">
-                                <h4>Venanda Mercy </h4>
-                            </div>
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
-                        <div class="testimonial clearfix">
-							<div class="testi-meta">
-                                <img src="images/testi_01.png" alt="" class="img-fluid">
-                                <h4>James Fernando </h4>
-                            </div>
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Wonderful Support!</h3>
-                                <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
-
-                        <div class="testimonial clearfix">
-							<div class="testi-meta">
-                                <img src="images/testi_02.png" alt="" class="img-fluid">
-                                <h4>Jacques Philips </h4>
-                            </div>
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Awesome Services!</h3>
-                                <p class="lead">Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you completed.</p>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div>
-                        <!-- end testimonial -->
-
-                        <div class="testimonial clearfix">
-							<div class="testi-meta">
-                                <img src="images/testi_03.png" alt="" class="img-fluid">
-                                <h4>Venanda Mercy </h4>
-                            </div>
-                            <div class="desc">
-                                <h3><i class="fa fa-quote-left"></i> Great & Talented Team!</h3>
-                                <p class="lead">The master-builder of human happines no one rejects, dislikes avoids pleasure itself, because it is very pursue pleasure. </p>
-                            </div>
-                            <!-- end testi-meta -->
-                        </div><!-- end testimonial -->
-                    </div><!-- end carousel -->
+                        </form>
+                    </div>
                 </div><!-- end col -->
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+            </div>
+        </div>
+    </div>
