--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -19,7 +19,7 @@
 										<p class="lead"><%= data.edu[0].title%></p>
 											<a href="/contact" class="hover-btn-new"><span>Bog'lanish</span></a>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-											<a href="/single" class="hover-btn-new"><span>Ko'proq Malumot</span></a>
+											<a href="/blog" class="hover-btn-new"><span>Ko'proq Malumot</span></a>
 									</div>
 								</div>
 							</div><!-- end row -->            
@@ -38,7 +38,7 @@
 										<p class="lead" data-animation="animated fadeInLeft"><%= data.edu[1].title%></p>
 											<a href="/contact" class="hover-btn-new"><span>Bog'lanish</span></a>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-											<a href="/single" class="hover-btn-new"><span>Ko'proq Malumot</span></a>
+											<a href="/blog" class="hover-btn-new"><span>Ko'proq Malumot</span></a>
 									</div>
 								</div>
 							</div><!-- end row -->            
@@ -57,7 +57,7 @@
 										<p class="lead" data-animation="animated fadeInLeft"><%= data.edu[2].title%></p>
 											<a href="/contact" class="hover-btn-new"><span>Bog'lanish</span></a>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-											<a href="/single" class="hover-btn-new"><span>Ko'proq Malumot</span></a>
+											<a href="/blog" class="hover-btn-new"><span>Ko'proq Malumot</span></a>
 									</div>
 								</div>
 							</div><!-- end row -->            
@@ -94,8 +94,6 @@
                         <h4>2021 BEST SmartEDU education school</h4>
                         <h2><%= data.aboutlast[0].title%></h2>
                         <p><%= data.aboutlast[0].description%></p>
-
-                        <a href="#" class="hover-btn-new orange"><span>Ko'proq Malumot</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -116,8 +114,6 @@
                     <div class="message-box">
                         <h2><%= data.aboutlast[1].title%></h2>
 						<p><%= data.aboutlast[1].description%></p>
-
-                        <a href="#" class="hover-btn-new orange"><span>Learn More</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
