--- a/views/page/news.ejs
+++ b/views/page/news.ejs
@@ -9,7 +9,7 @@
 			<div class="col-lg-9 blog-post-single">
 				<div class="blog-item">
 					<div class="image-blog">
-						<img src="<%= data.blog[0].image%>" alt="" class="img-fluid">
+						<img src="<%= data.blog.image%>" alt="" class="img-fluid">
 					</div>
 					<div class="post-content">
 						<div class="post-date">
@@ -17,15 +17,15 @@
 							<span class="month"><%= new Date().toDateString().slice(3,7)%></span>
 						</div>
 						<div class="meta-info-blog">
-							<span><i class="fa fa-calendar"></i> <a href="#"><%= data.blog[0].createdAt.toDateString().slice(3)%></a> </span>
+							<span><i class="fa fa-calendar"></i> <a href="#"><%= data.blog.createdAt.toDateString().slice(3)%></a> </span>
 							<span><i class="fa fa-tag"></i>  <a href="#">Blogs</a> </span>
 							<span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
 						</div>
 						<div class="blog-title">
-							<h2><a href="#" title=""><%= data.blog[0].name%></a></h2>
+							<h2><a href="#" title=""><%= data.blog.name%></a></h2>
 						</div>
 						<div class="blog-desc">
-							<p><%= data.blog[0].title%></p>
+							<p><%= data.blog.title%></p>
 						</div>							
 					</div>
 				</div>
@@ -35,7 +35,7 @@
 					<div id="comment-blog">
 						<ul class="comment-list">
 							<li class="comment">
-								<div class="avatar"><img alt="" src="images/iconca.png" class="avatar"></div>
+								<div class="avatar"><img alt="" src="/images/iconca.png" class="avatar"></div>
 								<div class="comment-container">
 									<h5 class="comment-author"><a href="#">John Smith</a></h5>
 									<div class="comment-meta">
@@ -48,7 +48,7 @@
 								</div>
 							</li>
 							<li class="comment">
-								<div class="avatar"><img alt="" src="images/iconca.png" class="avatar"></div>
+								<div class="avatar"><img alt="" src="/images/iconca.png" class="avatar"></div>
 								<div class="comment-container">
 									<h5 class="comment-author"><a href="#">John Smith</a></h5>
 									<div class="comment-meta">
@@ -61,7 +61,7 @@
 								</div>
 								<ul class="children">
 									<li class="comment">
-										<div class="avatar"><img alt="" src="images/iconca.png" class="avatar"></div>
+										<div class="avatar"><img alt="" src="/images/iconca.png" class="avatar"></div>
 										<div class="comment-container">
 											<h5 class="comment-author"><a href="#">Thomas Smith</a></h5>
 											<div class="comment-meta"><a href="#" class="comment-date link-style1">February 14, 2015</a><a class="comment-reply-link link-style3" href="#respond">Reply »</a></div>
