--- a/views/page/pricing.ejs
+++ b/views/page/pricing.ejs
@@ -8,11 +8,10 @@
     <div id="contact" class="section wb">
         <div class="container">
             <div class="section-title text-center">
-                <h3>Yordam Kerakmi? Bizga aloqaga chiqing!</h3>
-                <p class="lead">Bizning o'quv kurslarimiz haqida to'liq malumotga ega bo'moqchimisiz?  Bizga aloqaga chiqing, bizSizga yordam berishga doim tayyormiz.</p>
+                <h3>Kurslarimizga Yozilmoqchimisiz? Bizga aloqaga chiqing!</h3>
+                <p class="lead">O'ziz haqizdagi malumotlarni to'ldirib yuboring.Tezda aloqaga chiqamiz</p>
               
             </div><!-- end title -->
-            <h5 class="lead">O'ziz haqizdagi malumotlarni to'ldirib jo'nating.Sizga aloqaga chiqamiz!</h5>
             <hr class="invis">
             <div class="row">
                 <div class="col-xl-6 col-md-12 col-sm-12">
