--- a/views/page/title.ejs
+++ b/views/page/title.ejs
@@ -26,12 +26,7 @@
                                 <h2><a href="#" title=""><%= data.result.name%></a></h2>
                             </div>
                             <div class="blog-desc">
-                                <p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-                                <blockquote class="default">
-                                    Nulla nunc dui, tristique in semper vel, congue sed ligula. Nam dolor ligula, faucibus id sodales in, auctor fringilla libero. Pellentesque pellentesque eget tempor tellus. Fusce lacinia tempor malesuada. Ut lacus sapien, placerat a ornare nec, elementum sit amet felis. Maecenas pretium lorem hendrerit eros sagittis fermentum.
-                                </blockquote>
-                                <p>Phasellus tristique commodo libero, eget dignissim turpis dignissim quis. Morbi sit amet laoreet nibh, gravida scelerisque felis. Phasellus ultrices pellentesque ligula et viverra. Integer elementum, risus et tempor ultricies, libero turpis pellentesque massa, at facilisis erat nunc hendrerit erat. Praesent rhoncus, augue nec condimentum porta, magna dui volutpat augue, vitae blandit magna quam in massa. Fusce a rhoncus diam. Proin nec lacinia nibh. Praesent sed nisi sed purus dictum laoreet.</p>
-                                <p>Duis at tortor augue. Ut et justo consequat, facilisis lectus facilisis, tincidunt massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam vel vestibulum urna. Fusce sed magna posuere, vehicula odio vitae, tempor arcu. Pellentesque eget felis sed eros maximus elementum ultrices a elit. Sed ac sodales enim.</p>
+                                <p><%= data.result.description%></p>
                             </div>							
                         </div>
                     </div>
@@ -39,7 +34,7 @@
                     <div class="blog-author">
                         <div class="author-bio">
                             <h3 class="author_name"><a href="#"><%= data.result.teachersID.fullname%></a></h3>
-                            <h5>SmartEDU <a href="#">O'qituvchisi</a></h5>
+                            <h5>SmartEDU <a href="/teachers">O'qituvchisi</a></h5>
                             <p class="author_det">
                                 <%= data.result.teachersID.direction%>
                             </p>
@@ -71,31 +66,19 @@
                     </div>
                     <div class="widget-categories">
                         <h3 class="widget-title">Kurslarimiz</h3>
-                        <ul>
-                            <li><a href="#">Ieltsga tayyorlov</a></li>
-                            <li><a href="#">Biologiya fanidan Testga tayyotlov</a></li>
-                            <li><a href="#">Mental Arifmetika</a></li>
-                            <li><a href="#">Ingliz gramatikasi</a></li>
-                            <li><a href="#">Prizident Maktabiga Tayyarlov</a></li>
-                            <li><a href="#">SMM Menejment</a></li>
+                        <ul><% for(item of data.course) {%>
+                            <li><a href="/course/<%=`${item._id}`%>"><%= item.name%></a></li>
+                            <% }%>
                         </ul>
                     </div>
                     <div class="widget-tags">
                         <h3 class="widget-title">Search Tags</h3>
                         <ul class="tags">
-                            <li><a href="#"><b>business</b></a></li>
-                            <li><a href="#"><b>jquery</b></a></li>
-                            <li><a href="#">corporate</a></li>
-                            <li><a href="#">portfolio</a></li>
-                            <li><a href="#">css3</a></li>
-                            <li><a href="#"><b>theme</b></a></li>
-                            <li><a href="#"><b>html5</b></a></li>
-                            <li><a href="#"><b>mysql</b></a></li>
-                            <li><a href="#">multipurpose</a></li>
-                            <li><a href="#">responsive</a></li>
-                            <li><a href="#">premium</a></li>
-                            <li><a href="#">javascript</a></li>
-                            <li><a href="#"><b>Best jQuery</b></a></li>
+                            <li><a href="/teachers"><b>Teachers</b></a></li>
+                            <li><a href="/contact"><b>Bog'lanish</b></a></li>
+                            <li><a href="/blog">Yangiliklar</a></li>
+                            <li><a href="/">Bosh menu</a></li>
+                            <li><a href="/">Biz haqimizda</a></li>
                         </ul>
                     </div>
                 </div>
