--- a/views/page/title.ejs
+++ b/views/page/title.ejs
@@ -160,7 +160,7 @@
                                             <p></p><strong><%= data.result.name%> Bootcamp</strong>
                                             <p></p><strong><%= data.result.duration *2%> Soat oyiga</strong>
                                             <p></p><strong><%= Math.floor(data.result.books * 2)%> ta Kitob</strong> 
-                                            <p></p><strong><%= data.result.bonus%> + Bepul Yotoqxona</strong>
+                                            <p></p><strong><%= data.result.bonus%></strong>
                                             <p></p><strong>O'qituvchi : <%= data.result.teachersID.fullname%></strong>
                                         </div>
                                         <div class="pricing-table-sign-up">
