--- a/views/page/course.ejs
+++ b/views/page/course.ejs
@@ -1,4 +1,4 @@
-
+	
 	<div class="all-title-box">
 		<div class="container text-center">
 			<h1><%= data.phrase[0].teachersID.fullname%><span class="m_1"><%= data.phrase[0].title%></span></h1>
@@ -26,7 +26,7 @@
 								<h2><a href="/course/<%=`${item._id}`%>" title=""><%= item.name%>></a></h2>
 							</div>
 							<div class="course-desc">
-								<a href="/course/<%=`${item._id}`%>"><p><%= item.description%></p></a>
+								<a href="/course/<%=`${item._id}`%>"><p><%= item.description.split(' ',15).join(' ').toString()%> ...</p></a>
 							</div>
 							<div class="course-rating">
 								4.5
@@ -45,6 +45,7 @@
 							</ul>
 						</div>
 					</div>
+					<hr class="invis">
                 </div><!-- end col -->
 				<% }%>
             </div><!-- end row -->
