--- a/views/page/layout.ejs
+++ b/views/page/layout.ejs
@@ -15,8 +15,8 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -144,7 +144,7 @@
                                     <h3>Informatsion link</h3>
                                 </div>
                                 <ul class="footer-links">
-                                    <li><a href="/">Bosh Mune</a></li>
+                                    <li><a href="/">Bosh Menu</a></li>
                                     <li><a href="/courses/ielts">Kurslarimiz</a></li>
                                     <li><a href="/blog">Yangiliklar</a></li>
                                     <li><a href="/teachers">Uztozlar</a></li>
