--- a/views/page/layout.ejs
+++ b/views/page/layout.ejs
@@ -144,7 +144,7 @@
                                     <h3>Informatsion link</h3>
                                 </div>
                                 <ul class="footer-links">
-                                    <li><a href="/">Bosh Menu</a></li>
+                                    <li><a hrgit ef="/">Bosh Menu</a></li>
                                     <li><a href="/courses/ielts">Kurslarimiz</a></li>
                                     <li><a href="/blog">Yangiliklar</a></li>
                                     <li><a href="/teachers">Uztozlar</a></li>
